--- a/.github/workflows/sanity-test.yaml
+++ b/.github/workflows/sanity-test.yaml
@@ -51,6 +51,8 @@ jobs:
 
       - uses: actions/checkout@v3
 
+      - run: pwd
+
       - name: Setup Golang with cache
         uses: magnetikonline/action-golang-cache@v4
         with:
