--- a/.github/workflows/longevity_test.yml
+++ b/.github/workflows/longevity_test.yml
@@ -3,9 +3,6 @@ on:
   schedule:
     # Run every day at 04:00 GMT (roughly 8pm PST)
     - cron: "0 4 * * *"
-  push:
-    branches:
-      - longevityDeleteTest
   workflow_dispatch:
     inputs:
       user:
@@ -54,24 +51,21 @@ jobs:
         with:
           fetch-depth: 0 # needed to get latest tag
 
-      - name: Get version string
-        id: version
-        run: |
-          echo version=$(git describe --tags --abbrev=0) | tee -a $GITHUB_OUTPUT
-
-      - uses: actions/checkout@v3
-        with:
-          ref: ${{ steps.version.outputs.version }}
-
       - name: Setup Golang with cache
         uses: magnetikonline/action-golang-cache@v4
         with:
           go-version-file: src/go.mod
 
-      - run:  ls -t ./cmd
+      - run: go build -o longevity-test ./cmd/longevity_test
+
+      - name: Get version string
+        id: version
+        run: |
+          echo version=$(git describe --tags --abbrev=0) | tee -a $GITHUB_OUTPUT
+
+      - run: git checkout ${{ steps.version.outputs.version }}
+
       - run: go build -o corso
-      - run: go build -o longevity-test ./cmd/longevity_testing
-        working-directory: src
       
       - run: mkdir ${CORSO_LOG_DIR}
 
@@ -197,18 +191,45 @@ jobs:
 
 ##########################################################################################################################################
 
-# Backup Deletion test
+# Backup Exchange Deletion test
       - name: Backup Delete exchange test
         id: delete-exchange-test
+        env:
+          SERVICE: "exchange"
+          DELETION_DAYS: 5
         run: |
           set -euo pipefail
           echo -e "\nDelete Backup Exchange test\n" >> ${CORSO_LOG_FILE}
-          env:
-            SERVICE: "exchange"
-            DELETION_DAYS: 5
-          run: |
-            CORSO_LOG_FILE=${{ env.CORSO_LOG_DIR }}/backup_exchange.log
-            ./longevity-test
+          CORSO_LOG_FILE=${{ env.CORSO_LOG_DIR }}/backup_exchange.log
+          ./longevity-test
+
+##########################################################################################################################################
+
+# Backup Onedrive Deletion test
+      - name: Backup Delete onedrive test
+        id: delete-onedrive-test
+        env:
+          SERVICE: "onedrive"
+          DELETION_DAYS: 5
+        run: |
+          set -euo pipefail
+          echo -e "\nDelete Backup Onedrive test\n" >> ${CORSO_LOG_FILE}
+          CORSO_LOG_FILE=${{ env.CORSO_LOG_DIR }}/backup_onedrive.log
+          ./longevity-test
+
+##########################################################################################################################################
+
+# Backup Sharepoint Deletion test
+      - name: Backup Delete Sharepoint test
+        id: delete-sharepoint-test
+        env:
+          SERVICE: "sharepoint"
+          DELETION_DAYS: 5
+        run: |
+          set -euo pipefail
+          echo -e "\nDelete Backup Sharepoint test\n" >> ${CORSO_LOG_FILE}
+          CORSO_LOG_FILE=${{ env.CORSO_LOG_DIR }}/backup_sharepoint.log
+          ./longevity-test
 
 ##########################################################################################################################################
 
@@ -259,33 +280,33 @@ jobs:
           if-no-files-found: error
           retention-days: 14
 
-      # - name: SHA info
-      #   id: sha-info
-      #   if: failure()
-      #   run: |
-      #     echo ${GITHUB_REF#refs/heads/}-${GITHUB_SHA}
-      #     echo SHA=${GITHUB_REF#refs/heads/}-${GITHUB_SHA} >> $GITHUB_OUTPUT
-      #     echo RUN_URL=${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}  >> $GITHUB_OUTPUT
-      #     echo COMMIT_URL=${{ github.server_url }}/${{ github.repository }}/commit/${GITHUB_SHA} >> $GITHUB_OUTPUT
+      - name: SHA info
+        id: sha-info
+        if: failure()
+        run: |
+          echo ${GITHUB_REF#refs/heads/}-${GITHUB_SHA}
+          echo SHA=${GITHUB_REF#refs/heads/}-${GITHUB_SHA} >> $GITHUB_OUTPUT
+          echo RUN_URL=${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}  >> $GITHUB_OUTPUT
+          echo COMMIT_URL=${{ github.server_url }}/${{ github.repository }}/commit/${GITHUB_SHA} >> $GITHUB_OUTPUT
 
-      # - name: Send Github Action failure to Slack
-      #   id: slack-notification
-      #   if: failure()
-      #   uses: slackapi/slack-github-action@v1.24.0
-      #   with:
-      #     payload: |
-      #       {
-      #         "text": "Longevity test failure - build: ${{ job.status }} - SHA: ${{  steps.sha-info.outputs.SHA }}",
-      #         "blocks": [
-      #           {
-      #             "type": "section",
-      #             "text": {
-      #               "type": "mrkdwn",
-      #               "text": "[FAILED] Longevity Checks :: <${{  steps.sha-info.outputs.RUN_URL }}|[Logs]> <${{ steps.sha-info.outputs.COMMIT_URL }}|[Base]>\nCommit: <${{  steps.sha-info.outputs.COMMIT_URL }}|${{  steps.sha-info.outputs.SHA }}>"
-      #             }
-      #           }
-      #         ]
-      #       }
-      #   env:
-      #     SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-      #     SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
+      - name: Send Github Action failure to Slack
+        id: slack-notification
+        if: failure()
+        uses: slackapi/slack-github-action@v1.24.0
+        with:
+          payload: |
+            {
+              "text": "Longevity test failure - build: ${{ job.status }} - SHA: ${{  steps.sha-info.outputs.SHA }}",
+              "blocks": [
+                {
+                  "type": "section",
+                  "text": {
+                    "type": "mrkdwn",
+                    "text": "[FAILED] Longevity Checks :: <${{  steps.sha-info.outputs.RUN_URL }}|[Logs]> <${{ steps.sha-info.outputs.COMMIT_URL }}|[Base]>\nCommit: <${{  steps.sha-info.outputs.COMMIT_URL }}|${{  steps.sha-info.outputs.SHA }}>"
+                  }
+                }
+              ]
+            }
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+          SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
