proper log message

--- a/.github/workflows/longevity_test.yml
+++ b/.github/workflows/longevity_test.yml
@@ -199,7 +199,7 @@ jobs:
           DELETION_DAYS: 5
         run: |
           set -euo pipefail
-          CORSO_LOG_FILE=${{ env.CORSO_LOG_DIR }}/backup_exchange.log
+          echo -e "\nDelete Backup exchange \n" >> ${CORSO_LOG_FILE}
           ./longevity-test
 
 ##########################################################################################################################################
@@ -212,7 +212,7 @@ jobs:
           DELETION_DAYS: 5
         run: |
           set -euo pipefail
-          CORSO_LOG_FILE=${{ env.CORSO_LOG_DIR }}/backup_onedrive.log
+          echo -e "\nDelete Backup onedrive \n" >> ${CORSO_LOG_FILE}
           ./longevity-test
 
 ##########################################################################################################################################
@@ -225,7 +225,7 @@ jobs:
           DELETION_DAYS: 5
         run: |
           set -euo pipefail
-          CORSO_LOG_FILE=${{ env.CORSO_LOG_DIR }}/backup_sharepoint.log
+          echo -e "\nDelete Backup sharepoint \n" >> ${CORSO_LOG_FILE}
           ./longevity-test
 
 ##########################################################################################################################################
@@ -277,33 +277,33 @@ jobs:
           if-no-files-found: error
           retention-days: 14
 
-      # - name: SHA info
-      #   id: sha-info
-      #   if: failure()
-      #   run: |
-      #     echo ${GITHUB_REF#refs/heads/}-${GITHUB_SHA}
-      #     echo SHA=${GITHUB_REF#refs/heads/}-${GITHUB_SHA} >> $GITHUB_OUTPUT
-      #     echo RUN_URL=${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}  >> $GITHUB_OUTPUT
-      #     echo COMMIT_URL=${{ github.server_url }}/${{ github.repository }}/commit/${GITHUB_SHA} >> $GITHUB_OUTPUT
+      - name: SHA info
+        id: sha-info
+        if: failure()
+        run: |
+          echo ${GITHUB_REF#refs/heads/}-${GITHUB_SHA}
+          echo SHA=${GITHUB_REF#refs/heads/}-${GITHUB_SHA} >> $GITHUB_OUTPUT
+          echo RUN_URL=${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}  >> $GITHUB_OUTPUT
+          echo COMMIT_URL=${{ github.server_url }}/${{ github.repository }}/commit/${GITHUB_SHA} >> $GITHUB_OUTPUT
 
-      # - name: Send Github Action failure to Slack
-      #   id: slack-notification
-      #   if: failure()
-      #   uses: slackapi/slack-github-action@v1.24.0
-      #   with:
-      #     payload: |
-      #       {
-      #         "text": "Longevity test failure - build: ${{ job.status }} - SHA: ${{  steps.sha-info.outputs.SHA }}",
-      #         "blocks": [
-      #           {
-      #             "type": "section",
-      #             "text": {
-      #               "type": "mrkdwn",
-      #               "text": "[FAILED] Longevity Checks :: <${{  steps.sha-info.outputs.RUN_URL }}|[Logs]> <${{ steps.sha-info.outputs.COMMIT_URL }}|[Base]>\nCommit: <${{  steps.sha-info.outputs.COMMIT_URL }}|${{  steps.sha-info.outputs.SHA }}>"
-      #             }
-      #           }
-      #         ]
-      #       }
-      #   env:
-      #     SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-      #     SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
+      - name: Send Github Action failure to Slack
+        id: slack-notification
+        if: failure()
+        uses: slackapi/slack-github-action@v1.24.0
+        with:
+          payload: |
+            {
+              "text": "Longevity test failure - build: ${{ job.status }} - SHA: ${{  steps.sha-info.outputs.SHA }}",
+              "blocks": [
+                {
+                  "type": "section",
+                  "text": {
+                    "type": "mrkdwn",
+                    "text": "[FAILED] Longevity Checks :: <${{  steps.sha-info.outputs.RUN_URL }}|[Logs]> <${{ steps.sha-info.outputs.COMMIT_URL }}|[Base]>\nCommit: <${{  steps.sha-info.outputs.COMMIT_URL }}|${{  steps.sha-info.outputs.SHA }}>"
+                  }
+                }
+              ]
+            }
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+          SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
