--- a/.github/workflows/ci_test_cleanup.yml
+++ b/.github/workflows/ci_test_cleanup.yml
@@ -12,7 +12,7 @@ jobs:
     continue-on-error: true
     strategy:
       matrix:
-        user: [ CORSO_M365_TEST_USER_ID, CORSO_SECONDARY_M365_TEST_USER_ID, EXT_SDK_TEST_USER_ID, '' ]
+        user: [ CORSO_M365_TEST_USER_ID, CORSO_SECONDARY_M365_TEST_USER_ID, '' ]
 
     steps:
       - uses: actions/checkout@v3
@@ -43,7 +43,7 @@ jobs:
     continue-on-error: true
     strategy:
       matrix:
-        site: [ CORSO_M365_TEST_SITE_URL, EXT_SDK_TEST_SITE_URL ] 
+        site: [ CORSO_M365_TEST_SITE_URL ] 
 
     steps:
       - uses: actions/checkout@v3
@@ -54,14 +54,14 @@ jobs:
       # The additional 10 minutes is just to be good citizens.
       - name: Set purge boundary
         run: |
-          echo "HALF_HOUR_AGO=$(date -d '30 minutes ago' -u +"%Y-%m-%dT%H:%M:%SZ")" >> $GITHUB_ENV
+          echo' -u "HALF_HOUR_AGO=$(date -d '30 minutes ago +"%Y-%m-%dT%H:%M:%SZ")" >> $GITHUB_ENV
 
       - name: Purge CI-Produced Folders for Sites
         uses: ./.github/actions/purge-m365-data
         with:
           site: ${{ vars[matrix.site] }}
-          folder-prefix: ${{ vars.CORSO_M365_TEST_PREFIXES }} 
-          libraries: ${{ vars.CORSO_M365_TEST_SITE_LIBRARIES }} 
+          folder-prefix: ${{ vars.CORSO_M365_TEST_PREFIXES }}
+          libraries: ${{ vars.CORSO_M365_TEST_SITE_LIBRARIES }}
           library-prefix: ${{ vars.CORSO_M365_TEST_PREFIXES }}
           older-than: ${{ env.HALF_HOUR_AGO }}
           azure-client-id: ${{ secrets.CLIENT_ID }}
