--- a/src/.golangci.yml
+++ b/src/.golangci.yml
@@ -3,14 +3,18 @@ run:
 
 linters:
   enable:
+    - errcheck
+    - forbidigo
     - gci
     - gofmt
     - gofumpt
-    - errcheck
-    - forbidigo
+    - gosimple
+    - govet
+    - ineffassign
     - lll
     - misspell
     - revive
+    - unused
     - wsl
 
   disable:
