Add a couple more linters and fixes

--- a/src/.golangci.yml
+++ b/src/.golangci.yml
@@ -12,9 +12,11 @@ linters:
     - govet
     - ineffassign
     - lll
+    - loggercheck
     - misspell
     - revive
     - unused
+    - usestdlibvars
     - wsl
 
   disable:
