Add a couple more linters (#3886)
Lint for kv-pairs in log calls and things
that can be replaced with constants from
the standard library

Also add the linters that are enabled by
default just so things are more consistent
and clear going forward

---

#### Does this PR need a docs update or release note?

- [ ] :white_check_mark: Yes, it's included
- [ ] :clock1: Yes, but in a later PR
- [x] :no_entry: No

#### Type of change

- [ ] :sunflower: Feature
- [ ] :bug: Bugfix
- [ ] :world_map: Documentation
- [x] :robot: Supportability/Tests
- [x] :computer: CI/Deployment
- [ ] :broom: Tech Debt/Cleanup

#### Issue(s)

* #3654

#### Test Plan

- [x] :muscle: Manual
- [ ] :zap: Unit test
- [ ] :green_heart: E2E

--- a/src/.golangci.yml
+++ b/src/.golangci.yml
@@ -3,14 +3,20 @@ run:
 
 linters:
   enable:
+    - errcheck
+    - forbidigo
     - gci
     - gofmt
     - gofumpt
-    - errcheck
-    - forbidigo
+    - gosimple
+    - govet
+    - ineffassign
     - lll
+    - loggercheck
     - misspell
     - revive
+    - unused
+    - usestdlibvars
     - wsl
 
   disable:
