--- a/.github/actions/slack-message/action.yml
+++ b/.github/actions/slack-message/action.yml
@@ -22,14 +22,13 @@ runs:
     - name: trim ref
       shell: bash
       run: |
-        echo github_reference=${{ github.ref }} >> $GITHUB_ENV
+        echo "github_reference=${{ github.ref }}"" >> $GITHUB_ENV
         echo "proof ${{ github.ref }}"
         echo "test 1 ${{env.github_reference}}"
         echo "test 2 ${github_reference}"
         echo "test 3 ${github_reference#refs} ${github_reference#refs }"
         echo "test 4 $github_reference"
-        vvv=${{github.ref}} echo "test 5 ${vvv#refs} ${vvv#refs }"
-        echo trimmed_ref=${ IN_REF#refs/ } >> $GITHUB_ENV
+        echo "trimmed_ref=${IN_REF#refs/}" >> $GITHUB_ENV
 
     - name: compose links
       shell: bash
