--- a/.github/actions/slack-message/action.yml
+++ b/.github/actions/slack-message/action.yml
@@ -32,9 +32,9 @@ runs:
       shell: bash
       run: |
         echo "JOB=${{ github.job || '' }}" >> $GITHUB_ENV
-        echo "LOGS=${{ github.run_id && envlogurl || '-' }}" >> $GITHUB_ENV
-        echo "COMMIT=${{ github.sha && commiturl || '-' }}" >> $GITHUB_ENV
-        echo "REF=${{ env.trimmed_ref && refurl || '-' }}" >> $GITHUB_ENV
+        echo "LOGS=${{ github.run_id && env.logurl || '-' }}" >> $GITHUB_ENV
+        echo "COMMIT=${{ github.sha && env.commiturl || '-' }}" >> $GITHUB_ENV
+        echo "REF=${{ env.trimmed_ref && env.refurl || '-' }}" >> $GITHUB_ENV
 
     - id: slack-message
       uses: slackapi/slack-github-action@v1.24.0
